--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -22,6 +22,7 @@ h1, h2, h3 {
 
 h1 {
   font-size:28px;
+  text-shadow: #ddd 2px 2px 0px;
 }
 
 h2 {
@@ -119,14 +120,7 @@ header ul {
   border:1px solid #d2d2d2;
   box-shadow:inset #fff 0 1px 0, inset rgba(0,0,0,0.03) 0 -1px 0;
   width:270px;
-}
-
-div#preview-warning {
-  border-radius:5px;
-  border: 1px solid #ecc;
-  background-color: #fdd;
-  color: #955;
-  padding: 5px;
+  text-shadow: white 0px 1px 0px;
 }
 
 header li {
